--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -1,24 +1,29 @@
-name: Mise à jour ATIS
-
+name: Mise à jour automatique de l'ATIS
 on:
   schedule:
-    - cron: "22,52 * * * *"   # À 22 et 52 minutes de chaque heure
+    - cron: '22,52 * * * *'  # Exécution à 22 et 52 minutes de chaque heure
   workflow_dispatch:
 
 jobs:
   update-atis:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Configurer Python
-        uses: actions/setup-python@v4
+        uses: actions/checkout@v4
         with:
-          python-version: '3.12'
+          token: ${{ secrets.ATIS_TOKEN }}
 
-      - name: Configurer le cache pip
+      - name: Créer un fichier .gitignore
+        run: |
+          echo "atis_tallinn.mp3" >> .gitignore
+          echo "atis_tallinn.txt" >> .gitignore
+
+      - name: Installer les dépendances système
+        run: |
+          sudo apt update
+          sudo apt install -y ffmpeg curl
+
+      - name: Configurer le cache Python
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
@@ -26,26 +31,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Cache Whisper models
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/whisper
-          key: whisper-models-${{ runner.os }}
-
       - name: Installer Whisper
         run: |
           pip install git+https://github.com/openai/whisper.git
 
       - name: Enregistrer le flux ATIS avec curl et ffmpeg
         run: |
-          sudo apt update
-          sudo apt install -y ffmpeg curl
           curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" "https://s1-fmt2.liveatc.net/eetn2_atis" | \
           ffmpeg -i pipe:0 -t 60 -y atis_tallinn.mp3
 
       - name: Transcrire avec Whisper (modèle medium)
         run: |
-          whisper atis_tallinn.mp3 --model medium --language en --output_format txt --output_dir .
+          whisper atis_tallinn.mp3 --model medium --language English --output_format txt --output_dir .
 
       - name: Nettoyer transcription ATIS
         run: |
@@ -55,6 +52,7 @@ import sys
 from pathlib import Path
 
 def normalize_atis(text: str) -> str:
+    # Remplacement phonétique NATO
     nato = {
         "alva": "Alpha", "alpha": "Alpha", "bravo": "Bravo", "charlie": "Charlie",
         "delta": "Delta", "echo": "Echo", "foxtrot": "Foxtrot", "golf": "Golf",
@@ -74,7 +72,8 @@ def normalize_atis(text: str) -> str:
     for k,v in numbers.items():
         text = re.sub(rf"\b{k}\b", v, text, flags=re.IGNORECASE)
 
-    text = re.sub(r"QNH\s*([0-9 ]{3,5})", lambda m: f"QNH {m.group(1).replace(' ', '')} hPa", text, flags=re.IGNORECASE)
+    # Remplacements spécifiques ATIS
+    text = re.sub(r"QNH\s*([0-9 ]{3,5})", lambda m: f"QNH {m.group(1).replace(' ','')} hPa", text, flags=re.IGNORECASE)
     text = re.sub(r"([0-9]{2,3})\s*degrees?\s*([0-9]{1,2})\s*knots?", r"Wind: \1° / \2 kt", text, flags=re.IGNORECASE)
     text = re.sub(r"temperature\s*([\-0-9]{1,3})", r"Temperature: \1°C", text, flags=re.IGNORECASE)
     text = re.sub(r"dew point\s*([\-0-9]{1,3})", r"Dew point: \1°C", text, flags=re.IGNORECASE)
@@ -82,6 +81,7 @@ def normalize_atis(text: str) -> str:
     text = re.sub(r"transition level\s*([0-9]+)", r"Transition Level: \1", text, flags=re.IGNORECASE)
     text = re.sub(r"runway in use\s*([0-9]{2})", r"Runway in use: \1", text, flags=re.IGNORECASE)
     text = re.sub(r"ATIS information\s*([A-Z])", r"ATIS Information \1:", text, flags=re.IGNORECASE)
+
     return text.strip()
 
 def main():
@@ -100,27 +100,45 @@ if __name__ == "__main__":
 EOF
           python atis_formatter.py
 
-      - name: Injecter dans index.html
+      - name: Mettre à jour index.html avec la transcription
         run: |
           if [ -f atis_tallinn.txt ]; then
             transcription=$(cat atis_tallinn.txt | tr '\n' ' ' | sed -e 's/&/\&amp;/g' -e 's/</\&lt;/g' -e 's/>/\&gt;/g' -e 's/"/\&quot;/g' -e "s/'/\&#39;/g")
-            sed -i '/<div id="atis-message">/,/<\/div>/c\<div id="atis-message">\n        <p>'"$transcription"'</p>\n      </div>' index.html
+            cp index.html index.html.bak
+            awk -v trans="$transcription" '
+            BEGIN { in_div = 0 }
+            {
+              if ($0 ~ /<div id="atis-message">/) {
+                print $0
+                print "        <p>" trans "</p>"
+                in_div = 1
+              }
+              else if ($0 ~ /<\/div>/ && in_div) {
+                print $0
+                in_div = 0
+              }
+              else if (!in_div) {
+                print $0
+              }
+            }' index.html.bak > index.html
             echo "Contenu mis à jour dans index.html :"
-            grep -A3 "<div id=\"atis-message\">" index.html
+            grep -A5 "<div id=\"atis-message\">" index.html
           else
-            echo "Erreur : atis_tallinn.txt manquant" >&2
+            echo "Erreur : le fichier atis_tallinn.txt est manquant." >&2
             exit 1
           fi
 
-      - name: Commit et Push
+      - name: Valider et pousser les modifications
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html
+          git fetch origin main
+          git reset --soft origin/main
           if git diff-index --quiet HEAD; then
-            echo "Aucun changement dans index.html."
+            echo "Aucun changement détecté dans index.html."
           else
-            git pull --rebase origin main
             timestamp=$(date +"%Y-%m-%d %H:%M:%S")
             git commit -m "Mise à jour ATIS Tallinn : $timestamp"
-            git push
+            git push https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
+          fi
