--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -1,105 +1,65 @@
-name: Mise à jour automatique de l'ATIS
+name: Mise à jour de l'ATIS
 on:
   schedule:
-    - cron: '22,52 * * * *'  # Exécution à 22 et 52 minutes de chaque heure
-  workflow_dispatch:         # Permet un déclenchement manuel
+    - cron: '22,52 * * * *'
+  workflow_dispatch:
 
 jobs:
   update-atis:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout (shallow)
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.ATIS_TOKEN }}
+          fetch-depth: 1
 
-      - name: Créer un fichier .gitignore
+      - name: Installer ffmpeg/curl (optimisé)
         run: |
-          echo "atis_tallinn.mp3" >> .gitignore
-          echo "atis_tallinn.txt" >> .gitignore
+          sudo apt-get update -qq
+          sudo apt-get install -y --no-install-recommends ffmpeg curl
 
-      - name: Installer les dépendances système
-        run: |
-          sudo apt update
-          sudo apt install -y ffmpeg curl
-
-      - name: Configurer le cache Python
+      - name: Cache Whisper model
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          path: ~/.cache/whisper
+          key: whisper-model-small-${{ hashFiles('**/process_atis.py') }}
 
-      - name: Installer Whisper
-        run: |
-          pip install git+https://github.com/openai/whisper.git
+      - name: Installer Whisper (modèle small)
+        run: pip install git+https://github.com/openai/whisper.git
 
-      - name: Enregistrer le flux ATIS avec curl et ffmpeg
+      - name: Enregistrer l'ATIS (45s max)
         run: |
           curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" "https://s1-fmt2.liveatc.net/eetn2_atis" | \
-          ffmpeg -i pipe:0 -t 90 -y atis_tallinn.mp3
+          ffmpeg -i pipe:0 -t 45 -y atis_tallinn.mp3
 
-      - name: Transcrire avec Whisper (modèle medium)
+      - name: Transcrire avec Whisper (modèle small)
+        run: whisper atis_tallinn.mp3 --model small --language English --output_format txt
+
+      - name: Post-traitement ATIS
+        run: python3 process_atis.py atis_tallinn.txt > atis_structured.html
+
+      - name: Mettre à jour index.html
         run: |
-          whisper atis_tallinn.mp3 --model medium --language English --output_format txt --output_dir .
-          # Post-traitement basique pour nettoyer le texte
-          sed -i -e 's/ degrees/°/g' \
-                 -e 's/ kilo[^ ]* meters/km/g' \
-                 -e 's/ Celsius/°C/g' \
-                 -e 's/ transition level/Transition Level/g' \
-                 -e 's/ QNH \([0-9]\{4\}\)/QNH \1 hPa/g' \
-                 -e 's/\([0-9]\) \([0-9]\)/\1\2/g' \
-                 -e 's/\([0-9]\),\([0-9]\)/\1\2/g' \
-                 -e 's/\([0-9]\)\([0-9]\)\([0-9]\)°/\1\2\3°/g' \
-                 atis_tallinn.txt
-          echo "Transcription brute :"
-          cat atis_tallinn.txt
+          cp index.html index.html.bak
+          awk 'BEGIN { in_div = 0 } {
+            if ($0 ~ /<div id="atis-message">/) {
+              print $0;
+              while (getline line < "atis_structured.html") print line;
+              close("atis_structured.html");
+              in_div = 1;
+            } else if ($0 ~ /<\/div>/ && in_div) {
+              print $0;
+              in_div = 0;
+            } else if (!in_div) print $0;
+          }' index.html.bak > index.html
 
-      - name: Post-traitement du message ATIS
-        run: |
-          python3 process_atis.py atis_tallinn.txt > atis_structured.html
-          cat atis_structured.html
-
-      - name: Mettre à jour index.html avec la transcription
-        run: |
-          if [ -f atis_structured.html ]; then
-            cp index.html index.html.bak
-            awk '
-            BEGIN { in_div = 0 }
-            {
-              if ($0 ~ /<div id="atis-message">/) {
-                print $0
-                while (getline line < "atis_structured.html" > 0) {
-                  print line
-                }
-                close("atis_structured.html")
-                in_div = 1
-              }
-              else if ($0 ~ /<\/div>/ && in_div) {
-                print $0
-                in_div = 0
-              }
-              else if (!in_div) {
-                print $0
-              }
-            }' index.html.bak > index.html
-            echo "Contenu mis à jour dans index.html :"
-            grep -A15 "<div id=\"atis-message\">" index.html
-          else
-            echo "Erreur : le fichier atis_structured.html est manquant." >&2
-            exit 1
-          fi
-
-      - name: Valider et pousser les modifications
+      - name: Commit & Push (si changements)
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add index.html
-          if git diff-index --quiet HEAD; then
-            echo "Aucun changement détecté dans index.html."
-          else
-            timestamp=$(date +"%Y-%m-%d %H:%M:%S")
-            git commit -m "Mise à jour ATIS Tallinn : $timestamp"
-            git push --force https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "ATIS Update: $(date +'%Y-%m-%d %H:%M:%S')"
+            git push -f https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
           fi
