--- a/.github/workflows/test_atis_decoding.yml
+++ b/.github/workflows/test_atis_decoding.yml
@@ -1,4 +1,4 @@
-name: Test ATIS Decoding (Manual)
+name: Test ATIS Decoding (Mistral API)
 
 on:
   workflow_dispatch:
@@ -11,30 +11,42 @@ on:
 jobs:
   decode-atis:
     runs-on: ubuntu-latest
+
+    # 🧩 Étape 1 — On injecte la clé Mistral depuis GitHub Secrets
     env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
+
     steps:
+      # ✅ Étape 2 — Cloner le dépôt
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.ATIS_TOKEN }}
 
+      # ✅ Étape 3 — Installer Python et les dépendances nécessaires
       - name: Installer dépendances Python
         run: |
-          pip install beautifulsoup4 openai
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install requests beautifulsoup4
 
-      - name: Décoder le message ATIS
+      # ✅ Étape 4 — Décoder le message ATIS via l’IA Mistral
+      - name: Décoder le message ATIS avec Mistral
         run: |
           python3 process_atis.py ${{ github.event.inputs.atis_file }}
 
+      # ✅ Étape 5 — Mettre à jour la page HTML (si tu as update_index.py)
       - name: Mettre à jour index.html
         run: |
           python3 update_index.py
 
+      # ✅ Étape 6 — Commit et push des résultats
       - name: Commit et push des changements
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add index.html atis.json atis_structured.html
-          git commit -m "Mise à jour manuelle de l'ATIS (test)" || echo "Rien à commiter"
-          git push
+          git add index.html atis.json atis_structured.html || true
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "Mise à jour ATIS via Mistral API ($(date +'%Y-%m-%d %H:%M:%S'))"
+            git push https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
+          fi
