--- a/.github/workflows/update_atis.yml
+++ b/.github/workflows/update_atis.yml
@@ -1,38 +1,63 @@
-name: Test ATIS Decoding (Mistral API)
+name: Mise à jour automatique de l'ATIS
 
 on:
+  schedule:
+    - cron: '22,52 * * * *'
   workflow_dispatch:
-    inputs:
-      atis_file:
-        description: 'Nom du fichier ATIS à décoder (ex: atis_tallinn.txt)'
-        required: true
-        default: 'ATIS_tallinn.txt'
 
 jobs:
-  decode-atis:
+  update-atis:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.ATIS_TOKEN }}
 
+      - name: Installer dépendances système
+        run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y --no-install-recommends ffmpeg curl
+
+      - name: Cache Whisper model
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/whisper
+          key: whisper-model-small-${{ hashFiles('**/process_atis.py') }}
+
       - name: Installer dépendances Python
         run: |
-          pip install requests beautifulsoup4
+          pip install git+https://github.com/openai/whisper.git beautifulsoup4
 
-      - name: Décoder le message ATIS avec Mistral
+      - name: Enregistrer le flux ATIS
         run: |
-          python3 process_atis.py ${{ github.event.inputs.atis_file }}
+          curl -s -A "Mozilla/5.0" -e "https://www.liveatc.net/" "https://s1-fmt2.liveatc.net/eetn2_atis" | \
+          ffmpeg -i pipe:0 -t 120 -y atis_tallinn.mp3
 
-      - name: Mettre à jour index.html
-        run: |
-          python3 update_index.py
+      - name: Transcrire avec Whisper
+        run: whisper atis_tallinn.mp3 --model small --language English --output_format txt
 
-      - name: Commit et push des changements
+      - name: Post-traitement du message ATIS
+        run: python3 process_atis.py atis_tallinn.txt
+
+      - name: Mise à jour index.html
+        run: python3 update_index.py
+
+      - name: Upload fichiers temporaires pour debug
+        uses: actions/upload-artifact@v4
+        with:
+          name: atis-debug
+          path: |
+            atis_tallinn.txt
+            atis_structured.html
+
+      - name: Valider et pousser les modifications
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add index.html atis.json atis_structured.html
-          git commit -m "Mise à jour manuelle de l'ATIS (test)"
-          git push
+          git add index.html atis.json
+          if ! git diff-index --quiet HEAD; then
+            git commit -m "Mise à jour ATIS: $(date +'%Y-%m-%d %H:%M:%S')"
+            git push https://valoch29:${{ secrets.ATIS_TOKEN }}@github.com/valoch29/ReadATIS.git HEAD:main
+          fi
